# folder-hash

./: LICENSE  Makefile  README.md  TODO.md  setup.cfg
folder_hash/: hasher.py
