[metadata]
name = folder-hash
version = 1.0.0
license = MIT
description = A python module for finding the hash of a folder.
long_description = file: README.md
author = krazykirby99999
author_email = krazykirby99999@gmail.com
classifiers=
   Programming Language :: Python :: 3
   Operating System :: OS Independent

[options]
packages = find:
package_dir =
    =.
include_package_data = True
install_requires =

[options.packages.find]
where=.